Thu Feb 04 15:24:01 GMT 2010  Richard Boulton <richard@tartarus.org>

	* research/expand_prefixes.py: Add a little research script.

Tue Feb 02 16:48:19 GMT 2010  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update branchpoint.
	* xappy/mset_search_results.py: Use UnbiasedNumericRanges instead
	  of NumericRanges if it's available.

Mon Feb 01 11:19:12 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Check for the correct metadata key.

Wed Jan 27 15:20:15 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/cached_searches.py: Add ability to copy a cache
	  into the main xapian index.  When this has been done, open the
	  cache automatically, both in future IndexerConnections and in
	  SearchConnections.  Also, complain if an IndexerConnection which
	  has had a cache applied doesn't have a cache connected when a
	  deletion is performed.

Tue Jan 26 14:12:56 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Test asking for facets with a
	  cached query id, when none are cached.

Tue Jan 26 14:01:01 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/searchconnection_doctest2.txt,
	  xappy/unittests/facets.py: Fix a couple of facet testcases which
	  got missed.

Tue Jan 26 13:36:59 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Handle case where there are no cached
	  facets for a query, but facets are requested.  Need to add a
	  test for this.

Tue Jan 26 13:04:49 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/mset_search_results.py,
	  xappy/unittests/cached_searches.py: Revert sort order of facet
	  values to be by ascending order of key - putting them in
	  frequency order wasn't particularly helpful, and some external
	  code might depend on the order.  Also makes it easier to merge