@@ -1,3 +1,13 @@
+Fri Feb 05 09:34:08 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* xappy/doctests/searchconnection_doctest2.txt,
+	  xappy/mset_search_results.py: Remove use of score_evenness(): use
+	  a much simpler algorithm instead.  Testing with real-world data
+	  shows that score_evenness() doesn't return a particularly useful
+	  value anyway, so it'll be being removed from Xapian soon.  We're
+	  likely to remove get_suggested_facets() at some point soonish,
+	  too.
+
 Thu Feb 04 15:24:01 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* research/expand_prefixes.py: Add a little research script.
